# django_first_steps

./: LICENSE  db.sqlite3  pyproject.toml
app/: urls.py  views.py
djangocourse/: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  build.sh  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js
djangocourse/app/: admin.py  managers.py  models.py  urls.py  views.py
djangocourse/app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_created_at_and_more.py  0005_alter_article_options.py  0006_alter_userprofile_managers_alter_userprofile_email.py
djangocourse/djangocourse1/: asgi.py  settings.py  urls.py  wsgi.py
djangocourse/locale/es/LC_MESSAGES/: django.mo  django.po
djangocourse/static/: input.css  output.css
djangocourse/templates/: base.html
djangocourse/templates/account/: login.html  signup.html
djangocourse/templates/allauth/elements/: button.html  field.html  form.html  h1.html  h2.html  provider.html
djangocourse/templates/allauth/layouts/: base.html
djangocourse/templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
djangocourse/templates/app/layouts/: base_form.html
djangocourse/tests/: conftest.py  test_articles.py  test_homepage.py  test_signup.py
djangocourse/tests/pages/: articles.py  auth.py
