[project]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = [
    {name = "yasenAlexiev",email = "yassen4o222@abv.bg"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)"
]

[tool.poetry]
packages = [{include = "djangocourse", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
